--- a/form/in.html
+++ b/form/in.html
@@ -1,30 +1,177 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8" />
-    <title>Boundary Text Search con Google Maps</title>
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <style>
-      /* Para que el mapa ocupe toda la pantalla */
-      html,
-      body {
-        height: 50%;
-        margin: 20px;
-        padding: 20px;
-      }
-      #map {
-        height: 100%;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="map"></div>
 
-    <!-- Tu código JavaScript -->
-    <script src="mapa.js"></script>
-    </script>
+<head>
+  <meta charset="utf-8">
+  <title>Mapa con Leaflet + Caché</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Carga de la librería de Maps y Places -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
-  </body>
+  <!-- Hoja de estilos de Leaflet -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha512-sA+QoOo3XJ8z6H2IDXCCsL78x4V1WE8+o1KMbjssjtdTkVcq+/jmdU9+wK6MZdYJYZzDN6mWShV0c0U5t6Ucdg=="
+    crossorigin="" />
+
+  <style>
+    html,
+    body,
+    #map {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
+    #controls {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: white;
+      padding: 8px;
+      border-radius: 4px;
+      z-index: 1000;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div id="controls">
+    <input id="inputDireccion" type="text" placeholder="Buscar dirección…" size="30">
+    <button onclick="buscarDireccion()">Buscar</button>
+    <select id="selectSugerencias">
+      <option value="">Selecciona una opción…</option>
+    </select>
+    <button id="PrimaryBtn">Siguiente</button>
+  </div>
+
+  <div id="map"></div>
+
+  <!-- Script de Leaflet -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha512-huTH5Qncgkz6Upk5P0gbpov7Z15jSe6Q7TkZ8/3fkiIY2B9QXa8nTmJW4w2MbNKIJanjb0BU+qIYh8mnM+YdQw=="
+    crossorigin=""></script>
+
+  <!-- Registro del Service Worker -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js')
+        .then(reg => console.log('Service Worker registrado:', reg.scope))
+        .catch(err => console.warn('Error al registrar SW:', err));
+    }
+  </script>
+
+  <!-- Tu lógica de Leaflet y Nominatim -->
+  <script>
+    let mapa = L.map('map').setView([20.123, -98.733], 13);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(mapa);
+
+    let marcador;
+
+    function colocarMarcador(lat, lon, nombre = "") {
+      if (marcador) mapa.removeLayer(marcador);
+
+      marcador = L.marker([lat, lon], { draggable: true }).addTo(mapa);
+      marcador.bindPopup(nombre || 'Ubicación seleccionada').openPopup();
+
+      marcador.on("dragend", () => {
+        const { lat, lng } = marcador.getLatLng();
+        fetch(`https://nominatim.openstreetmap.org/reverse?format=jsonv2&lat=${lat}&lon=${lng}`)
+          .then(res => res.json())
+          .then(data => {
+            const direccion = data.display_name;
+            document.getElementById('inputDireccion').value = direccion;
+
+            const nuevaOpcion = { display_name: direccion, lat, lon };
+            const select = document.getElementById('selectSugerencias');
+            const option = document.createElement('option');
+            option.value = JSON.stringify(nuevaOpcion);
+            option.textContent = direccion;
+            select.appendChild(option);
+            select.value = option.value;
+
+            sessionStorage.setItem("direccion", direccion);
+            sessionStorage.setItem("idea", option.value);
+            sessionStorage.setItem("lat", lat);
+            sessionStorage.setItem("lon", lng);
+          });
+      });
+    }
+
+    function buscarDireccion() {
+      const input = document.getElementById('inputDireccion').value;
+      const url = `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(input)}`;
+      fetch(url)
+        .then(res => res.json())
+        .then(data => {
+          const select = document.getElementById('selectSugerencias');
+          select.innerHTML = '<option value="">Selecciona una opción…</option>';
+          data.forEach(item => {
+            const option = document.createElement('option');
+            option.value = JSON.stringify(item);
+            option.textContent = item.display_name;
+            select.appendChild(option);
+          });
+        });
+    }
+
+    function actualizarMapa() {
+      const select = document.getElementById('selectSugerencias');
+      if (!select.value) return;
+      const lugar = JSON.parse(select.value);
+      document.getElementById('inputDireccion').value = lugar.display_name;
+      colocarMarcador(lugar.lat, lugar.lon, lugar.display_name);
+      mapa.setView([lugar.lat, lugar.lon], 15);
+      sessionStorage.setItem("direccion", lugar.display_name);
+      sessionStorage.setItem("idea", select.value);
+      sessionStorage.setItem("lat", lugar.lat);
+      sessionStorage.setItem("lon", lugar.lon);
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      const btnSiguiente = document.getElementById("PrimaryBtn");
+      const inputDireccion = document.getElementById("inputDireccion");
+      const selectIdea = document.getElementById("selectSugerencias");
+
+      btnSiguiente.addEventListener("click", e => {
+        e.preventDefault();
+        const direccion = inputDireccion.value.trim();
+        const idea = selectIdea.value;
+        if (!direccion || idea === "") return;
+        window.location.href = "step3_casa.html";
+      });
+
+      // Restaurar sesión
+      const savedDireccion = sessionStorage.getItem("direccion");
+      const savedIdea = sessionStorage.getItem("idea");
+      const savedLat = sessionStorage.getItem("lat");
+      const savedLon = sessionStorage.getItem("lon");
+
+      if (savedDireccion) inputDireccion.value = savedDireccion;
+      if (savedIdea) {
+        const ideaObj = JSON.parse(savedIdea);
+        const option = document.createElement('option');
+        option.value = savedIdea;
+        option.textContent = ideaObj.display_name;
+        if (![...selectIdea.options].some(o => o.value === savedIdea)) {
+          selectIdea.appendChild(option);
+        }
+        selectIdea.value = savedIdea;
+      }
+      if (savedLat && savedLon) {
+        colocarMarcador(savedLat, savedLon, savedDireccion);
+        mapa.setView([savedLat, savedLon], 15);
+      }
+
+      inputDireccion.addEventListener("input", () => {
+        sessionStorage.setItem("direccion", inputDireccion.value);
+      });
+      selectIdea.addEventListener("change", () => {
+        sessionStorage.setItem("idea", selectIdea.value);
+      });
+    });
+  </script>
+
+</body>
+
 </html>
