Corrección de CSS Responsivo

--- a/form/step1.html
+++ b/form/step1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -33,9 +33,9 @@
         <p data-layer="desc" class="Desc">Asegúrese de ingresar todos los detalles, especialmente los obligatorios.</p>
       </div>
 
-
+      <br>
       <div data-layer="step_form" class="StepForm">
-        <div data-layer="step1" class="Step1">
+        <div data-layer="step1" class="Step1Barra">
           <div data-layer="progreso" class="Progreso">
             <div data-layer="steps" class="Steps">
               <div data-layer="step1_bar" class="Step1Bar">
@@ -76,6 +76,7 @@
           <div data-layer="titulo_text" class="TituloTextProp">Tipo de Propiedad</div>
           <div data-layer="desc_text" class="DescText">Proporcionar el tipo de su propiedad</div>
         </div>
+        <br>
         <div data-layer="select-type" class="SelectType">
           <div data-layer="tipo-1" class="Tipo1" onclick="selectOption('departamento')">
             <input type="radio" name="tipo_propiedad" id="departamento" value="departamento" style="display: none;">
@@ -123,6 +124,7 @@
         </a>
       </div>
     </div>
+
   </div>
   </div>
 
