--- a/form/step2.html
+++ b/form/step2.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Fuentes de Google -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -133,7 +133,9 @@
           </div>
         </div>
         <br>
-        <a href="#" id="buscarMapa">Buscar en el mapa</a>
+
+        <a href="#" class="BtnBuscarMapa" id="buscarMapa">Buscar en el mapa</a>
+
         <br>
       </form>
       <div data-layer="mapa" class="MapaImg">
@@ -144,7 +146,7 @@
       <a href="step1.html" data-layer="Secondary BTN" class="SecondaryBtn">
         <div data-layer="Button Text" class="ButtonTextWhite">Anterior</div>
       </a>
-      <a href="step4.html" data-layer="Primary BTN" id="PrimaryBtn" class="PrimaryBtn">
+      <a href="step3_casa.html" data-layer="Primary BTN" id="PrimaryBtn" class="PrimaryBtn">
         <div data-layer="Button Text" class="ButtonText">Siguiente</div>
       </a>
     </div>
