--- a/form/step3_casa.html
+++ b/form/step3_casa.html
@@ -113,7 +113,7 @@
               Proporcionar las características de su propiedad
             </div>
           </div>
-          <div data-layer="step" class="Step Step33">
+          <div data-layer="step" class="Step33">
             <div data-layer="condition" class="Condition">
               <div data-layer="titulo" class="Titulo">
                 <div data-layer="titulo_text" class="Nombre ConditioName">
@@ -135,11 +135,13 @@
                   Año de construcción<samp>*</samp>
                 </div>
               </div>
-              <input type="text" data-layer="input-año" class="InputLada1" placeholder="0000" required />
+              <input type="text" data-layer="input-año" class="InputLada1Ano" placeholder="0000" required />
               <small id="anoErrorMsg" style="color: red; display: none;">El año debe estar entre 1600 y 2025</small>
 
             </div>
           </div>
+
+          <br>
           <div data-layer="step" class="Step">
             <div data-layer="m_terreno" class="MTerreno">
               <div data-layer="titulo" class="MTerrenoText">
@@ -157,6 +159,7 @@
                   m² Construcción<samp>*</samp>
                 </div>
               </div>
+
               <div data-layer="input">
                 <input type="number" data-layer="input-construccion" class="InputLada2" placeholder="0" required />
               </div>
