--- a/form/step3_casa.html
+++ b/form/step3_casa.html
@@ -142,7 +142,7 @@
           </div>
 
           <br>
-          <div data-layer="step" class="Step">
+          <div data-layer="step" class="StepTerreno">
             <div data-layer="m_terreno" class="MTerreno">
               <div data-layer="titulo" class="MTerrenoText">
                 <div data-layer="titulo_text" class="Nombre">
@@ -252,7 +252,7 @@
             </div>
           </div>
 
-          <div data-layer="step" class="Step">
+          <div data-layer="step" class="StepTerreno2">
             <div data-layer="amenidades" class="Amenidades">
               <div data-layer="titulo" class="Titulo">
                 <div data-layer="titulo_text" class="Nombre">
@@ -260,7 +260,7 @@
                 </div>
               </div>
               <div data-layer="input_amenities" class="InputAmenidades">
-                <div data-layer="input_content" class="InputContent">
+                <div data-layer="input_content" class="InputContentAme">
                   <div data-layer="input" class="InputAm">
                     <div data-layer="content" class="Content">
                       <div data-layer="tags" class="Tags">
@@ -288,12 +288,13 @@
                               <label for="amenidad_balcon1">Balcón</label>
                             </div>
                           </div>
-                          <div data-layer="badge" class="Badge">
-                            <div data-layer="tag" class="Tag">
-                              <div data-layer="placeholder" class="Placeholder">
-                                <input type="checkbox" id="amenidad_balcon2" name="amenidad_balcon2" />
-                                <label for="amenidad_balcon2">Balcón</label>
-                              </div>
+
+                        </div>
+                        <div data-layer="badge" class="Badge">
+                          <div data-layer="tag" class="Tag">
+                            <div data-layer="placeholder" class="Placeholder">
+                              <input type="checkbox" id="amenidad_balcon2" name="amenidad_balcon2" />
+                              <label for="amenidad_balcon2">Balcón</label>
                             </div>
                           </div>
                         </div>
@@ -304,7 +305,7 @@
               </div>
             </div>
           </div>
-          <div data-layer="step" class="Step PrecioStep">
+          <div data-layer="step" class="StepTerreno PrecioStep">
             <div data-layer="precio" class="Precio">
               <div data-layer="titulo" class="Titulo">
                 <div data-layer="titulo_text" class="Nombre">
