--- a/form/contact.html
+++ b/form/contact.html
@@ -160,7 +160,7 @@
 
 
         <div data-layer="navigation" class="Navigation3">
-          <a href="inicio.html" data-layer="Secondary BTN" class="SecondaryBtn">
+          <a href="/index.html" data-layer="Secondary BTN" class="SecondaryBtn">
             <div data-layer="Button Text" class="ButtonTextWhite">
               Anterior
             </div>
