--- a/form/step1.html
+++ b/form/step1.html
@@ -115,7 +115,7 @@
       </div>
 
       <div data-layer="navigation" class="Navigation">
-        <a href="contact.html" data-layer="Secondary BTN" class="SecondaryBtn">
+        <a href="/form/contact.html" data-layer="Secondary BTN" class="SecondaryBtn">
           <div data-layer="Button Text" class="ButtonTextWhite">Anterior</div>
         </a>
         <a href="#" id="PrimaryBtn" data-layer="Primary BTN" class="PrimaryBtn">
@@ -245,7 +245,7 @@
       const tipoSeleccionado = document.querySelector('input[name="tipo_propiedad"]:checked');
       if (!tipoSeleccionado) {
       } else {
-        window.location.href = "step2.html";
+        window.location.href = "/form/step2.html";
       }
     });
 
