--- a/form/step2.html
+++ b/form/step2.html
@@ -143,10 +143,10 @@
       </div>
     </div>
     <div data-layer="navigation" class="Navigation2">
-      <a href="step1.html" data-layer="Secondary BTN" class="SecondaryBtn">
+      <a href="./step1.html" data-layer="Secondary BTN" class="SecondaryBtn">
         <div data-layer="Button Text" class="ButtonTextWhite">Anterior</div>
       </a>
-      <a href="step3_casa.html" data-layer="Primary BTN" id="PrimaryBtn" class="PrimaryBtn">
+      <a href="./step3_casa.html" data-layer="Primary BTN" id="PrimaryBtn" class="PrimaryBtn">
         <div data-layer="Button Text" class="ButtonText">Siguiente</div>
       </a>
     </div>
