--- a/form/step3_casa.html
+++ b/form/step3_casa.html
@@ -324,10 +324,10 @@
         </div>
       </div>
       <div data-layer="navigation" class="Navigation">
-        <a href="step2.html" data-layer="Secondary BTN" class="SecondaryBtn">
+        <a href="/form/step2.html" data-layer="Secondary BTN" class="SecondaryBtn">
           <div data-layer="Button Text" class="ButtonTextWhite">Anterior</div>
         </a>
-        <a href="step4.html" data-layer="Primary BTN" id="btnSiguiente" class="PrimaryBtn">
+        <a href="/form/step4.html" data-layer="Primary BTN" id="btnSiguiente" class="PrimaryBtn">
           <div data-layer="Button Text" class="ButtonText">Siguiente</div>
         </a>
       </div>
