--- a/form/step4.html
+++ b/form/step4.html
@@ -163,10 +163,10 @@
         </div>
       </div>
       <div data-layer="navigation" class="Navigation">
-        <a href="step3_casa.html" data-layer="Secondary BTN" class="SecondaryBtn">
+        <a href="/form/step3_casa.html" data-layer="Secondary BTN" class="SecondaryBtn">
           <div data-layer="Button Text" class="ButtonTextWhite">Anterior</div>
         </a>
-        <a href="step5.html" id="nextBtn" data-layer="Primary BTN" class="PrimaryBtn">
+        <a href="/form/step5.html" id="nextBtn" data-layer="Primary BTN" class="PrimaryBtn">
           <div data-layer="Button Text" class="ButtonText">Siguiente</div>
         </a>
       </div>
