--- a/form/step5.html
+++ b/form/step5.html
@@ -98,14 +98,14 @@
           <br />
         </div>
 
-        <a href="step6.html" data-layer="Primary BTN" id="btnEnviar" class="PrimaryBtn">
+        <a href="/form/step6.html" data-layer="Primary BTN" id="btnEnviar" class="PrimaryBtn">
           <div data-layer="Button Text" class="ButtonText">Enviar</div>
         </a>
 
         <br />
       </div>
       <div data-layer="navigation" class="Navigation">
-        <a href="step4.html" data-layer="Secondary BTN" class="SecondaryBtn">
+        <a href="/form/step4.html" data-layer="Secondary BTN" class="SecondaryBtn">
           <div data-layer="Button Text" class="ButtonTextWhite">Anterior</div>
         </a>
       </div>
