Razón de solicitud

--- a/form/contact.html
+++ b/form/contact.html
@@ -136,12 +136,11 @@
                         Razón<samp>*</samp>
                       </div>
                     </div>
-                    <select data-layer="input" id="razon" class="InputRazon">
+                    <select data-layer="input" id="razon" class="InputRazon" required>
                       <option value="">Seleccione una opción</option>
-                      <option value="Familiar">Familiar</option>
-                      <option value="Venta">Venta</option>
-                      <option value="Servicio">Servicio</option>
-                      <option value="Otro">Otro</option>
+                      <option value="vender">Deseo Vender</option>
+                      <option value="comprar">Deseo Comprar</option>
+                      <option value="informativo">Solo informativo</option>                      
                     </select>
                   </div>
                 </div>
